...
      const email = metodos.getValues('email');
      const existe = await userService.verificarEmail(email);
      setIsLoading(false);
      if (existe) {
        showPopup({
          type: 'warning',
          title: 'E-mail em uso',
          message: 'Este e-mail já está cadastrado no sistema. Por favor, utilize outro e-mail ou a opção "Esqueci minha senha".',
          confirmText: 'Entendido',
        });
        return;
      }
    }
...
